# antinature

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  convert_to_notebooks.py  paper.md  pyproject.toml  setup.py  test_core_module.py  test_examples.py  test_minimal.py  test_missing_qiskit.py  test_output.txt  test_results.json  test_simple_import.py  test_sparse_pauliop_missing.py  test_with_qiskit.py  tox.ini
antimatter-qchem/: __init__.py
antimatter.egg-info/: PKG-INFO  SOURCES.txt
antimatter_beta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
antimatter_qc/: __init__.py  antimatter_core.py  antimatter_integrals.py  antimatter_operators.py  antimatter_scf.py  antimatter_visualization.py  positron_basis.py
antimatter_qchem/: __init__.py  utils.py
antinature/: __init__.py  utils.py
antinature.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
antiverse22/: utils.py
anttimatter/: __init__.py  utils.py
anttimatter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: 09_relativistic_effects.py  README.md  anti_hydrogen.py  heh.py  positronium.py  positronium_simulation.py  qiskit_integration.py  quantum_antimatter.py
plan/: enhancement plan.md
qantimatter/: __init__.py  utils.py
qantimatter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
quantimatter/: __init__.py  utils.py
tests/: anti_hydrogen_workflow.py  antimatter_custom_ansatz.py  antimatter_quantum_benchmark.py  basis_test.py  hamiltonian_test.py  integral_engine_test.py  physics_test.py  positronium_quantum.py  qiskit_test.py  scf_test.py  (+24 more)
(+117 files in other folders)
