[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antinature"
version = "0.1.0"
authors = [
    {name = "Mukul Kumar", email = "Mukulpal108@hotmail.com"},
]
description = "Quantum chemistry package for antimatter simulations"
readme = "README.md"
requires-python = ">=3.8,<3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 4 - Beta",
]

[project.urls]
"Homepage" = "https://github.com/mk0dz/antinature"
"Bug Tracker" = "https://github.com/mk0dz/antinature/issues"
"Documentation" = "https://github.com/mk0dz/antinature"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=antinature" 